SERVER-21246: Coverity complaint 76653, initialize stuck_ts fields; probably not a bug, but it is a reasonable clarification.